# rss-feeds

./: .gitignore  README.md  pyproject.toml
.github/workflows/: label_new_feed.yml  run_feeds.yml
feed_generators/: anthropic_eng_blog.py  anthropic_research_blog.py  claude_blog.py  dao_ailab_blog.py  goodfire_research_blog.py  leloykun_blog.py  lmsys_blog.py  noumena_blog.py  nousresearch_blog.py  people_daily_blog.py  run_all_feeds.py  test_feed.py  thinkingmachines_blog.py  thinkingmachines_news_blog.py  transformer_circuits_blog.py  utils.py
feeds/: feed_anthropic_engineering.xml  feed_anthropic_research.xml  feed_claude_blog.xml  feed_dao_ailab.xml  feed_goodfire_research.xml  feed_leloykun.xml  feed_lmsys.xml  feed_noumena.xml  feed_people_daily.xml  feed_thinkingmachines.xml  feed_thinkingmachines_news.xml  feed_transformer_circuits.xml
