[project]
name = "rss-feeds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "feedgen>=1.0.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
]

[[tool.uv.index]]
url = "https://bytedpypi.byted.org/simple"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
